# healtcare_france_mapping

./: .gitignore  README.md  pyproject.toml
data/: build_access.py  download_data.py  export_static.py
docs/: index.html
docs/css/: style.css
docs/data/: access_layers.json  communes_professions.json  departements.geojson  dept_stats.json  etablissements.json  hex_population.json  opportunity.json  priority_basins.json
docs/js/: app.js  map-access.js  map-centers.js  map-population.js
