[project]
name = "healthcare-france-mapping"
version = "0.1.0"
description = "Interactive mapping of the French healthcare system using open government data"
authors = [{ name = "Fabien Sartre" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.28",
    "pandas>=2.1",
    "pydeck>=0.8",
    "numpy>=2.0",
    "requests>=2.31",
    "pyarrow>=15.0",
    "pyproj>=3.6",
    "geopandas>=0.14",
    "shapely>=2.0",
    "protobuf>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

